audio overflow fix

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -826,3 +826,7 @@ header .entry-meta {
 	list-style-type: none;
 	padding: 0;
 }
+.jp-audio {
+	overflow: auto;
+	display: block;
+}
